activitys+intents+changes

--- a/app/src/main/res/menu/menucontextual.xml
+++ b/app/src/main/res/menu/menucontextual.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity_menus"
+    tools:context=".activitymenus"
     >
 <item
         android:id="@+id/action_settings"
