--- a/app/src/main/res/layout/activity_menus.xml
+++ b/app/src/main/res/layout/activity_menus.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity_menus">
+    tools:context=".activitymenus">
 
     <TextView
         android:id="@+id/mcnt"
@@ -18,5 +18,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.12" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="112dp"
+        android:text="enviar"
+        app:layout_constraintEnd_toEndOf="@+id/mcnt"
+        app:layout_constraintStart_toStartOf="@+id/mcnt"
+        app:layout_constraintTop_toBottomOf="@+id/mcnt"
+        android:onClick="openMain2"
+        tools:ignore="OnClick" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
