--- a/app/src/main/res/menu/menucontextual.xml
+++ b/app/src/main/res/menu/menucontextual.xml
@@ -2,11 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activitymenus"
+    tools:context="com.egarciapalaciosblasco.interfaces1ev.activitymenus"
     >
 <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+        android:id="@+id/item1"
+        android:title="settings"
+        app:showAsAction="ifRoom"
+        />
+    <item
+        android:id="@+id/item2"
+        android:title="kotlin"
         app:showAsAction="ifRoom"
         />
 </menu>
